# couchgames

./: .gitignore  LICENSE  Makefile  couchgames.cabal  elm-package.json  stack.yaml
app/: Main.hs
clientsrc/: Login.elm  Main.elm  Util.elm
elmbridge/: Main.hs
src/Client/: SocketIO.hs  Test.hs  VirtualDOM.hs
src/CouchGames/: Config.hs  ElmTypes.hs  Game.hs  Lobby.hs  Manager.hs  Message.hs  Player.hs  Resistance.hs  Server.hs  Session.hs  Util.hs
static/: index.html  style.css  virtual-dom-wrapper.js
test/: Spec.hs
test/CouchGames/: ResistanceSpec.hs
