name:                couchgames
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/alexlegg/couchgames#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Legg
maintainer:          alex@legg.info
copyright:           Copyright: (c) 2016 Alex Legg
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CouchGames.Server
                     , CouchGames.Player
                     , CouchGames.Lobby
                     , CouchGames.Config
                     , CouchGames.Session
                     , CouchGames.Message
                     , CouchGames.ElmTypes
                     , CouchGames.Manager
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.11
                     , elm-bridge >= 0.3.0.0 && < 0.4
                     , Spock
                     , wai
                     , warp
                     , users >= 0.5.0.0
                     , postgresql-simple
                     , users-postgresql-simple >= 0.5.0.2
                     , containers
                     , yaml
                     , transformers
                     , text
                     , http-types
                     , engine-io
                     , engine-io-wai
                     , socket-io
                     , stm
                     , wai-middleware-static
                     , vector
                     , mtl
                     , hslogger
                     , bytestring
                     , string-conversions
                     , websockets
                     , wai-websockets
  default-language:    Haskell2010

executable couchgames-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , couchgames
  default-language:    Haskell2010

test-suite couchgames-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , couchgames
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , wai-extra
                     , containers
                     , unordered-containers
                     , bytestring
                     , http-types
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexlegg/couchgames
